--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
         <artifactId>exec-maven-plugin</artifactId>
         <version>3.1.0</version>
         <configuration>
-          <mainClass>com.example.App</mainClass>
+          <mainClass>com.trackgenesis.App</mainClass>
         </configuration>
       </plugin>
     </plugins>
