Added too menu.properties and further implemented

--- a/src/main/resources/properties/menu.properties
+++ b/src/main/resources/properties/menu.properties
@@ -18,3 +18,10 @@ Welcome to Track Genesis!\n\
 2. Register\n\
 -------------------------\n\
 Enter your choice
+
+uploadMenu=\
+How would you like to upload the job description?\n\
+1. Type\n\
+2. Upload File (DOC, DOCX or PDF (PDF preferred))\n\
+Enter your choice
+
